--- a/src/components/UserDetails/UserDetails.module.css
+++ b/src/components/UserDetails/UserDetails.module.css
@@ -1,6 +1,7 @@
 .userDetails {
     border-radius: 6px;
-    height: 60%;
+    height: 40vh;
+    width: 30vw;
     background-color: rgba(87, 70, 234, 1);
     padding: 2% 2% 2% 2%;
     display: flex;
@@ -9,6 +10,8 @@
 
 .userDetails>img {
     height: 100%;
+    width: 80%
+
 }
 
 
@@ -39,6 +42,7 @@
     line-height: 2rem;
     letter-spacing: 0.02em;
     text-align: left;
+    color: white;
 }
 
 .categoriesChoosen {
@@ -52,7 +56,7 @@
 }
 
 .categoriesChoosen>div {
-    width: 30%;
+    width: 45%;
     height: 30%;
     border-radius: 20px;
     background: rgba(159, 148, 255, 1);
